--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Library</title>
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <h1>Plibrary
+                    <sup><img id="logo-img" src="images/logo.svg" alt=""></sup>
+                </h1>
 
+            </div>
+            <div class="nav-button">
+                <img id="toggle-button" src="images/add.png" alt="">
+            </div>
+        </header>
+
+        <dialog>
+            <h1>New Book</h1>
+            <form>
+                <input id="book-title" type="text" placeholder="Title" required>
+                <input id="book-author" type="text" placeholder="Author" required>
+                <input id="book-pages" type="number" placeholder="Pages" required>
+                <span>Read?</span><input type="checkbox" placeholder="Read?" name="read" id='read'>
+                <button id="confirmBtn" type="submit">Confirm</button>
+            </form>
+
+        </dialog>
+
+        <div class="main">
+            <div id="book">
+
+            </div>
+        </div>
+
+        <div class="sticky-footer">
+            <P>All rights reserved, 2023</P>
+        </div>
+
+    </div>
+
+
+    <script src="app.js"></script>
 </body>
 
 </html>
